2024-06-24  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.5.

2024-06-23  Robby Stephenson  <robby@periapsis.org>

	* Implemented overrides for SRU query indices (Bug 488931).

2024-06-21  Robby Stephenson  <robby@periapsis.org>

	* Removed percent encoding for XSLT file reading (Bug 488707).

2024-05-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with showing entries with long content (Bug 487079).

2024-03-23  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.4.

2024-03-16  Robby Stephenson  <robby@periapsis.org>

	* Updated FilmAffinity data source.

2024-03-09  Robby Stephenson  <robby@periapsis.org>

	* Fixed DVDFr searches with title accents.

2024-01-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug for entry selection after changing group field (Bug 480297).

2024-01-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed display bug with entry status (Bug 479843).

2024-01-13  Robby Stephenson  <robby@periapsis.org>

	* Updated Open Library source to search for comics (Bug 479506).
	* Fixed bug with filter dialog buttons (Bug 479771).

2024-01-09  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with opening help from the config dialog (Bug 479591).

2024-01-01  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.3.
	* Updated author search for Open Library.
	* Improved entry matching heuristics.

2023-12-19  Robby Stephenson  <robby@periapsis.org>

	* Updated Kino-Teatr data source.

2023-11-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with showing empty space on left for custom collections with no image

2023-10-22  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.2.

2023-09-28  Robby Stephenson  <robby@periapsis.org>

	* Added importer for Discogs collections (Bug 446262).

2023-09-27  Robby Stephenson  <robby@periapsis.org>

	* Added fallback title for entries with no title field (Bug 231867).

2023-09-25  Robby Stephenson  <robby@periapsis.org>
